Fix typo in FR locale of source item in options

--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -192,7 +192,7 @@
   },
   "mute_source": {
     "message":
-      "Ajouter des raccourcis pour filter la source d'un tweet dans son menu"
+      "Ajouter des raccourcis pour filtrer la source d'un tweet dans son menu"
   },
   "hotlink_item": {
     "message":
