--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -171,6 +171,10 @@
     "message":
       "カラムの折りたたみを展開したとき、最新のツイートが表示されるようにフィードを最上部までスクロールする"
   },
+  "resize_big_images_on_paste": {
+    "message":
+      "クリップボードから5MB以上の大きな画像を貼り付けたとき、自動的にサイズを変更する"
+  },
   "btd_logo": {
     "message": "左下の TweetDeck ロゴを BetterTweetDeck のロゴに置き換える"
   },
