--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -7,5 +7,191 @@
   },
   "settings_title": {
     "message": "Better TweetDeck Settings"
+  },
+  "settings_show_cards_inside_columns": {
+    "message": "Show tweet cards inside columns"
+  },
+  "settings_show_profile_badges_on_top_of_avatars": {
+    "message": "Show profile badges on top of avatars"
+  },
+  "settings_collapse_read_dms": {
+    "message": "Collapse read DMs"
+  },
+  "settings_freeze_gifs_in_profile_pictures": {
+    "message": "Freeze GIFs in profile pictures"
+  },
+  "settings_remove_t_co_redirection_on_links": {
+    "message": "Remove t.co redirection on links"
+  },
+  "settings_make_buttons_smaller_in_the_composer": {
+    "message": "Make buttons smaller in the composer"
+  },
+  "settings_reflect_new_tweets_and_dms_in_the_tabs_title": {
+    "message": "Reflect new tweets and DMs in the tab's title"
+  },
+  "settings_switch_to_light_theme_when_os_is_in_light_mode": {
+    "message": "Switch to light theme when OS is in light mode"
+  },
+  "settings_scrollbar_default": {
+    "message": "Default"
+  },
+  "settings_scrollbar_thin": {
+    "message": "Thin"
+  },
+  "settings_scrollbar_hidden": {
+    "message": "Hidden"
+  },
+  "settings_style_of_scrollbars": {
+    "message": "Style of scrollbars"
+  },
+  "settings_show_and_quot_clear_and_quot_button_in_columns_and_apos_header": {
+    "message": "Show \"Clear\" button in columns' header"
+  },
+  "settings_show_collapse_button_in_columns_header": {
+    "message": "Show \"Collapse\" button in columns' header"
+  },
+  "settings_hide_icons_on_top_of_columns": {
+    "message": "Hide icons on top of columns"
+  },
+  "settings_use_old_style_of_replies": {
+    "message": "Use old style of replies (inline @mentions)"
+  },
+  "settings_timestamp_relative": {
+    "message": "Relative"
+  },
+  "settings_timestamp_custom": {
+    "message": "Custom"
+  },
+  "settings_date_format": {
+    "message": "Date format"
+  },
+  "settings_short_time_after_24h": {
+    "message": "Use a different date format after 24h"
+  },
+  "settings_timestamp_presets": {
+    "message": "Presets"
+  },
+  "settings_timestamp_preset_absolute": {
+    "message": "Absolute"
+  },
+  "settings_timestamp_preset_absolute_us": {
+    "message": "Absolute (U.S. style)"
+  },
+  "settings_fullname_username": {
+    "message": "Fullname @username"
+  },
+  "settings_username_fullname": {
+    "message": "@username fullname"
+  },
+  "settings_username": {
+    "message": "@username"
+  },
+  "settings_fullname": {
+    "message": "Fullname"
+  },
+  "settings_name_display_style": {
+    "message": "Name display style"
+  },
+  "settings_general": {
+    "message": "General"
+  },
+  "settings_theme": {
+    "message": "Theme"
+  },
+  "settings_columns": {
+    "message": "Columns"
+  },
+  "settings_tweets_display": {
+    "message": "Tweets display"
+  },
+  "settings_tweet_actions": {
+    "message": "Tweet actions"
+  },
+  "settings_actions_visibility_always": {
+    "message": "Always"
+  },
+  "settings_actions_visibility_on_hover": {
+    "message": "On hover"
+  },
+  "settings_actions_visibility": {
+    "message": "Actions visibility"
+  },
+  "settings_position_of_actions": {
+    "message": "Position of actions"
+  },
+  "settings_actions_position_left": {
+    "message": "Left"
+  },
+  "settings_actions_position_right": {
+    "message": "Right"
+  },
+  "settings_action_block_author": {
+    "message": "Block author"
+  },
+  "settings_action_mute_author": {
+    "message": "Mute author"
+  },
+  "settings_action_copy_media_links": {
+    "message": "Copy media links"
+  },
+  "settings_action_download_media": {
+    "message": "Download media"
+  },
+  "settings_additional_actions": {
+    "message": "Additional actions"
+  },
+  "settings_downloaded_filename_format": {
+    "message": "Downloaded filename format"
+  },
+  "settings_filename_format_tokens": {
+    "message": "Filename format tokens"
+  },
+  "settings_token_username_without": {
+    "message": "username (without @)"
+  },
+  "settings_token_tweet_id": {
+    "message": "Tweet ID"
+  },
+  "settings_token_filename": {
+    "message": "Filename"
+  },
+  "settings_token_file_extension": {
+    "message": "File extension"
+  },
+  "settings_token_year": {
+    "message": "Year"
+  },
+  "settings_token_day": {
+    "message": "Day"
+  },
+  "settings_token_month": {
+    "message": "Month"
+  },
+  "settings_token_minutes": {
+    "message": "Minutes"
+  },
+  "settings_token_seconds": {
+    "message": "Seconds"
+  },
+  "settings_menu_item_mute_hashtags": {
+    "message": "Mute #hashtags"
+  },
+  "settings_menu_item_mute_source": {
+    "message": "Mute tweet's source"
+  },
+  "settings_menu_item_redraft": {
+    "message": "Re-draft"
+  },
+  "settings_additional_tweet_menu_items": {
+    "message": "Additional tweet menu items"
+  },
+  "settings_replace_hearts_by_stars": {
+    "message": "Replace hearts by stars"
+  },
+  "settings_custom_css": {
+    "message": "Custom CSS"
+  },
+  "settings_custom_css_warning": {
+    "message": "Pasting unknown code in this editor can lead to weird issues if you don't know what\n        you are doing"
   }
 }
