add settings and use CSS for og aspect ratio

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -199,5 +199,8 @@
   },
   "settings_save": {
     "message": "Save"
+  },
+  "settings_use_original_aspect_ratio_images": {
+    "message": "Display single images with their original aspect ratio (applies only to Medium and\n              Large sizes)"
   }
 }
