add missing locales string

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -268,5 +268,11 @@
   },
   "settings_misc": {
     "message": "Misc."
+  },
+  "settings_meta": {
+    "message": "Meta"
+  },
+  "settings_import_export": {
+    "message": "Import / Export"
   }
 }
