--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "app_desc": {
-    "message": "Emojis, thumbnails and advanced features for https://tweetdeck.twitter.com !"
+    "message": "Take TweetDeck to the next level!"
   },
   "app_name": {
     "message": "Better TweetDeck"
