pause column scroll on hover

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -280,5 +280,8 @@
   },
   "settings_tweet_content": {
     "message": "Tweet content"
+  },
+  "settings_pause_column_scrolling_on_hover": {
+    "message": "Pause column scrolling on hover"
   }
 }
