request tabs permission on Firefox to fix share item

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -349,5 +349,8 @@
   },
   "settings_always_characters_left": {
     "message": "Always show the number of characters left in the tweet composer"
+  },
+  "settings_better_tweetdeck_ask_tabs": {
+    "message": "Better TweetDeck will ask access to browser tabs for this to work properly"
   }
 }
