--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -352,5 +352,8 @@
   },
   "settings_better_tweetdeck_ask_tabs": {
     "message": "Better TweetDeck will ask access to browser tabs for this to work properly"
+  },
+  "settings_show_like_rt_indicators_on_top_of_tweets": {
+    "message": "Show like/RT indicators on top of tweets"
   }
 }
