--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -346,5 +346,17 @@
   },
   "settings_credits_about": {
     "message": "Credits / About"
+  },
+  "settings_always_characters_left": {
+    "message": "Always show the number of characters left in the tweet composer"
+  },
+  "settings_better_tweetdeck_ask_tabs": {
+    "message": "Better TweetDeck will ask access to browser tabs for this to work properly"
+  },
+  "settings_show_like_rt_indicators_on_top_of_tweets": {
+    "message": "Show like/RT indicators on top of tweets"
+  },
+  "settings_do_the_same_for_single_images_in_quoted_tweets": {
+    "message": "Do the same for single images in quoted tweets"
   }
 }
